--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = 'http://test.com'</script>
+<script type="text/javascript">window.location = 'http://tybenz.com'</script>
