Reverted url short back a bit

--- a/cNe/index.html
+++ b/cNe/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = 'http://tybenz.com'</script>
+<script type="text/javascript">window.location = 'http://themebot.github.com'</script>
